--- a/assets/styles.css
+++ b/assets/styles.css
@@ -28,8 +28,8 @@
     height: 25%;
   }
   .logo{
-    width: 60;
-    height: 60;
+    width: 50;
+    height: 50;
     position: relative;          
     display: inline-block;       
     left: 50%;                  
@@ -40,11 +40,13 @@
   .caption{
     color: #00AFFF;
     text-align: center;
+    font-size: 16px;
     margin-top: 10px;
   }
   .heading{
     color: #00AFFF;
     text-align: center;
+    font-size: 23px;
     margin-top: 45px;
   }
   .shape3{
