--- a/assets/styles.css
+++ b/assets/styles.css
@@ -50,7 +50,7 @@
     margin-top: 45px;
   }
   .shape3{
-    background-color: #fff;
+    background-color: #000;
     display: block;
     margin-left: auto;
     margin-right: auto;
