--- a/assets/styles.css
+++ b/assets/styles.css
@@ -40,17 +40,17 @@
   .caption{
     color: #00AFFF;
     text-align: center;
-    font-size: 16px;
+    font-size: 14px;
     margin-top: 10px;
   }
   .heading{
     color: #00AFFF;
     text-align: center;
-    font-size: 23px;
-    margin-top: 45px;
+    font-size: 25px;
+    margin-top: 40px;
   }
   .shape3{
-    background-color: #000;
+    background-color: #fff;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -59,7 +59,7 @@
     width: 90%;
     z-index: 10;
     margin-top: 5%;
-    height: 25%;
+    height: 30%;
   }
 
 
