--- a/assets/styles.css
+++ b/assets/styles.css
@@ -37,6 +37,22 @@
     transform: translate(-50%);  
 
   }
+  .logo1{
+    width: 50;
+    height: 50;
+    position: relative;          
+    display: inline-block;                        
+    top: 25; 
+     
+
+  }
+  .appname{
+    color: #111111;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 900;
+    margin-top: 35px;
+  }
   .caption{
     color: #00AFFF;
     text-align: center;
@@ -59,7 +75,41 @@
     width: 92%;
     z-index: 10;
     margin-top: 5%;
-    height: 40%;
+    height: 35%;
   }
 
 
+  .grid-container {
+    display: grid;
+    height: 80%;
+    margin-top: -20;
+    grid-template-columns: auto auto;
+    padding: 10px;
+  }
+  .grid-item {
+    padding: 10px;
+    font-size: 30px;
+    text-align: center;
+  }
+
+  .btn {
+    background-color: #00AFFF;
+    border: none;
+    width: 95%;
+    height: 7%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 15px;
+    margin-top: 15px;
+    color: white;
+    padding: 12px 16px;
+    font-weight: 900;
+    font-size: 20px;
+    cursor: pointer;
+  }
+  
+  /* Darker background on mouse-over */
+  .btn:hover {
+    background-color: RoyalBlue;
+  }
