--- a/assets/styles.css
+++ b/assets/styles.css
@@ -78,12 +78,32 @@
     height: 45%;
   }
 
+  .shape4{
+    background-color: #fff;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 25px;
+    box-shadow: rgba(0, 0, 0, 0.2) 1px 5px 1px 1px;
+    width: 92%;
+    z-index: 10;
+    margin-top: 5%;
+    height: 18%;
+  }
+
 
   .grid-container {
     display: grid;
     height: 80%;
     margin-top: -20;
     grid-template-columns: auto auto;
+    padding: 10px;
+  }
+  .grid-container1 {
+    display: grid;
+    height: 80%;
+    margin-top: -20;
+    grid-template-columns: auto auto auto;
     padding: 10px;
   }
   .grid-item {
@@ -109,7 +129,11 @@
     cursor: pointer;
   }
   
-  /* Darker background on mouse-over */
   .btn:hover {
-    background-color: RoyalBlue;
+    background-color: rgb(19, 154, 196);
+  }
+  .footerclr{
+    text-align: center; 
+    color: #222222;
+    font-size: 14px;
   }
