--- a/assets/styles.css
+++ b/assets/styles.css
@@ -87,7 +87,7 @@
     box-shadow: rgba(0, 0, 0, 0.2) 1px 5px 1px 1px;
     width: 92%;
     z-index: 10;
-    margin-top: 5%;
+    margin-top: 10%;
     height: 18%;
   }
 
@@ -102,6 +102,7 @@
   .grid-container1 {
     display: grid;
     height: 80%;
+    width: 100%;
     margin-top: -20;
     grid-template-columns: auto auto auto;
     padding: 10px;
@@ -135,5 +136,5 @@
   .footerclr{
     text-align: center; 
     color: #222222;
-    font-size: 14px;
+    font-size: 12px;
   }
