--- a/assets/styles.css
+++ b/assets/styles.css
@@ -125,6 +125,7 @@
     border: none;
     width: 95%;
     height: 10%;
+    z-index: 50;
     display: block;
     margin-left: auto;
     margin-right: auto;
