--- a/assets/styles.css
+++ b/assets/styles.css
@@ -7,6 +7,9 @@
     text-decoration: none;
     box-sizing: border-box;
   }
+  h2{
+    color: #00AFFF;
+  }
   html {
     scroll-behavior: smooth;
   }
@@ -83,6 +86,19 @@
     z-index: 1;
     margin-top: 5%;
     height: 45%;
+  }
+
+  .shape5{
+    background-color: #fff;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 25px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 0px 0px;
+    width: 92%;
+    padding: 20px;
+    z-index: 1;
+    margin-top: 5%;
   }
 
   .shape4{
