--- a/assets/styles.css
+++ b/assets/styles.css
@@ -10,6 +10,13 @@
   h2{
     color: #00AFFF;
   }
+  p{
+    font-size: 14px;
+  }
+  h4{
+    text-align: center;
+    margin-top: 10px;
+  }
   html {
     scroll-behavior: smooth;
   }
@@ -92,6 +99,7 @@
     background-color: #fff;
     display: block;
     margin-left: auto;
+    text-align: justify;
     margin-right: auto;
     border-radius: 25px;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 0px 0px;
@@ -110,7 +118,7 @@
     box-shadow: rgba(0, 0, 0, 0.2) 1px 5px 1px 1px;
     width: 92%;
     z-index: 10;
-    margin-top: 8%;
+    margin-top: 5%;
     height: 20%;
   }
 
