--- a/assets/styles.css
+++ b/assets/styles.css
@@ -2,10 +2,13 @@
 *{
     margin: 0;
     padding: 0;
-    list-style: none;
     font-family: 'Josefin Sans', sans-serif;
     text-decoration: none;
     box-sizing: border-box;
+  }
+  ul{
+    padding-left: 25px;
+    font-size: 14px;
   }
   h2{
     color: #00AFFF;
@@ -36,6 +39,17 @@
     z-index: 10;
     margin-top: -95%;
     height: 25%;
+  }
+  .shape21{
+    background-color: #fff;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 25px;
+    width: 92%;
+    z-index: 10;
+    margin-top: -95%;
+    height: 30%;
   }
   .logo{
     width: 50;
@@ -118,7 +132,7 @@
     box-shadow: rgba(0, 0, 0, 0.2) 1px 5px 1px 1px;
     width: 92%;
     z-index: 10;
-    margin-top: 5%;
+    margin-top: 8%;
     height: 20%;
   }
 
